[package]
name = "passert_macros"
version = "0.2.0"
authors = ["Manuel Woelker <github@manuel.woelker.org>"]
description = "Pretty/Power assertion macros for rust (macro crate)"

repository = "https://github.com/manuel-woelker/rust-passert"

readme = "../README.md"

keywords = ["assert", "test"]

license = "MIT"

[lib]
crate-type = ["dylib"]
plugin = true

[dependencies]
